--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-id-generator": "^3.0.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.1.1"
